# tp-so-2019-1c-Suck-et

./: .gitignore  README.md
kernel/: .cproject  CMakeLists.txt  Makefile  conexiones.c  conexiones.h  kernel  kernel.c  kernel.cfg  kernel.h
kernel/src/: kernel.c  kernel.h
lfs/: .cproject  CMakeLists.txt  LFS.c  LFS.h  Makefile  lfs  lfs.c  lfs.cfg  lfs.h
lfs/src/: LFS.h
libs/: conexiones.c  conexiones.h  config.c  config.h  consola.c  consola.h  generales.c  generales.h  sockets.c  sockets.h
memoria/: .cproject  .gitignore  CMakeCache.txt  CMakeLists.txt  MakeFile  Makefile  cmake_install.cmake  conexiones.c  conexiones.h  memoria  memoria.c  memoria.cfg  memoria.h
memoria/src/: memoria.c  memoria.h
pruebas/base/kernel/: kernel.cfg
pruebas/base/lfs/: lfs.cfg
pruebas/base/memoria/: memoria1.cfg  memoria2.cfg
pruebas/prueba-kernel/kernel/: kernel.cfg
pruebas/prueba-kernel/lfs/: lfs.cfg
pruebas/prueba-kernel/memoria/: memoria1.cfg  memoria2.cfg  memoria3.cfg  memoria4.cfg
pruebas/prueba-lfs/kernel/: kernel.cfg
pruebas/prueba-lfs/lfs/: lfs.cfg
pruebas/prueba-lfs/memoria/: memoria1.cfg  memoria2.cfg  memoria3.cfg
pruebas/prueba-lfs/memorias/: memoria1.cfg  memoria3.cfg
pruebas/prueba-memoria/kernel/: kernel.cfg
pruebas/prueba-memoria/lfs/: lfs.cfg
pruebas/prueba-memoria/memoria/: memoria1.cfg
pruebas/scripts/: .mover-metadata.swo  .mover-metadata.swp  mover-metadata
pruebas/stress/kernel/: kernel.cfg
pruebas/stress/lfs/: lfs.cfg
pruebas/stress/memoria/: memoria1.cfg  memoria2.cfg  memoria3.cfg  memoria4.cfg  memoria5.cfg
scripts/: cambiar-brach  clonar-repo  hacer-make  mover-metadata  reiniciar-fs
